nohup.out
  File "crawler.py", line 23
    for group in HHDataHackers:
      ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "crawler.py", line 32, in <module>
    for post in group._posts(limit=300):
  File "/root/fbmarkandsweep/marksweep/utils.py", line 16, in _lazygen
    response = graph.get_connections(source, edges, limit=limit)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 112, in get_connections
    return self.request(id + "/" + connection_name, args)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 298, in request
    raise GraphAPIError(response)
facebook.GraphAPIError: An unexpected error has occurred. Please retry your request later.
Traceback (most recent call last):
  File "crawler.py", line 43, in <module>
    for comment in post._comments(limit=300):
  File "/root/fbmarkandsweep/marksweep/utils.py", line 16, in _lazygen
    response = graph.get_connections(source, edges, limit=limit)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 112, in get_connections
    return self.request(id + "/" + connection_name, args)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 295, in request
    urllib.urlencode(args), post_data, timeout=self.timeout)
  File "/usr/lib/python2.7/urllib2.py", line 127, in urlopen
    return _opener.open(url, data, timeout)
  File "/usr/lib/python2.7/urllib2.py", line 404, in open
    response = self._open(req, data)
  File "/usr/lib/python2.7/urllib2.py", line 422, in _open
    '_open', req)
  File "/usr/lib/python2.7/urllib2.py", line 382, in _call_chain
    result = func(*args)
  File "/usr/lib/python2.7/urllib2.py", line 1222, in https_open
    return self.do_open(httplib.HTTPSConnection, req)
  File "/usr/lib/python2.7/urllib2.py", line 1187, in do_open
    r = h.getresponse(buffering=True)
  File "/usr/lib/python2.7/httplib.py", line 1045, in getresponse
    response.begin()
  File "/usr/lib/python2.7/httplib.py", line 409, in begin
    version, status, reason = self._read_status()
  File "/usr/lib/python2.7/httplib.py", line 365, in _read_status
    line = self.fp.readline(_MAXLINE + 1)
  File "/usr/lib/python2.7/socket.py", line 476, in readline
    data = self._sock.recv(self._rbufsize)
  File "/usr/lib/python2.7/ssl.py", line 341, in recv
    return self.read(buflen)
  File "/usr/lib/python2.7/ssl.py", line 260, in read
    return self._sslobj.read(len)
KeyboardInterrupt
Traceback (most recent call last):
  File "crawler.py", line 32, in <module>
    for post in group._posts(limit=300):
  File "/root/fbmarkandsweep/marksweep/utils.py", line 19, in _lazygen
    time.sleep(60)
NameError: global name 'time' is not defined
Traceback (most recent call last):
  File "crawler.py", line 45, in <module>
    for comment in post._comments(limit=300):
  File "/root/fbmarkandsweep/marksweep/utils.py", line 21, in _lazygen
    response = graph.get_connections(source, edges, limit=limit)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 112, in get_connections
    return self.request(id + "/" + connection_name, args)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 298, in request
    raise GraphAPIError(response)
facebook.GraphAPIError: Error validating access token: Session has expired on Nov 13, 2014 8:00am. The current time is Nov 13, 2014 8:01am.
Traceback (most recent call last):
  File "crawler.py", line 45, in <module>
    for comment in post._comments(limit=300):
  File "/root/fbmarkandsweep/marksweep/utils.py", line 21, in _lazygen
    response = graph.get_connections(source, edges, limit=limit)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 112, in get_connections
    return self.request(id + "/" + connection_name, args)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 298, in request
    raise GraphAPIError(response)
facebook.GraphAPIError: Error validating access token: Session has expired on Nov 13, 2014 8:00am. The current time is Nov 13, 2014 8:01am.
Traceback (most recent call last):
  File "crawler.py", line 20, in <module>
    mark = user.User()
  File "/root/fbmarkandsweep/marksweep/user.py", line 25, in __init__
    User.__graph.extend_access_token(APP_ID, APP_SECRET)
  File "/usr/local/lib/python2.7/dist-packages/facebook.py", line 443, in extend_access_token
    raise GraphAPIError(response)
facebook.GraphAPIError: Error validating access token: Session has expired on Nov 13, 2014 11:00am. The current time is Nov 13, 2014 1:31pm.
Traceback (most recent call last):
  File "crawler.py", line 56, in <module>
    for like in post._likes(300):
  File "/root/fbmarkandsweep/marksweep/utils.py", line 20, in _lazygen
    time.sleep(60)
KeyboardInterrupt
